--- a/src/components/centerTile.module.css
+++ b/src/components/centerTile.module.css
@@ -1,4 +1,9 @@
+.roll > img {
+   width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
 .score {
     font-size: 5em;
-    text-align: center;
 }
