--- a/src/components/playerTile.module.css
+++ b/src/components/playerTile.module.css
@@ -4,5 +4,12 @@
 
 .flex_item {
     width: 33.3%;
+}
 
+.tile {
+    border: solid;
+    border-radius: 10px;
+    margin: 1em;
+    height: 100%;
+    box-shadow: 10px 5px 5px lightslategray;
 }
