--- a/src/components/playerTile.module.css
+++ b/src/components/playerTile.module.css
@@ -11,5 +11,16 @@
     border-radius: 10px;
     margin: 1em;
     height: 100%;
+
+}
+
+.active {
+    composes: tile;
     box-shadow: 10px 5px 5px lightslategray;
 }
+
+.inactive {
+    composes: tile;
+    box-shadow: none;
+}
+
